<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.novyapp.test.fasttypingtraining.ui.main.MainViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/appNameText_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:gravity="clip_horizontal|center_horizontal"
            android:text="@string/appName"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/play_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/x_large_margin"
            android:layout_marginTop="@dimen/x_large_margin"
            android:layout_marginEnd="@dimen/x_large_margin"
            android:layout_marginBottom="@dimen/x_large_margin"
            android:contentDescription="@string/contentDesc_AppLogo"
            app:layout_constraintBottom_toTopOf="@+id/appNameText_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/play_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="@dimen/xx_large_margin"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp"
            android:text="@string/play"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appNameText_textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>